--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -5,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>FCC JavaScript Tutorial</title>
 	</head>
-	<body></body>
-	<script src="script.js"></script>
+	<body>
+		<script src="script.js"></script>
+	</body>
 </html>
